# recut-ai

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml  security.yml
demo/: README.md  demo.py  mock_provider.py  otel_bridge.py
docs/: configuration.md
docs/product/: ENTERPRISE.md  INTEGRATIONS.md  PLAN_V06_INTEGRATIONS.md  PLAN_V07_HARDENING.md  POSITIONING.md  ROADMAP.md
recut/: __init__.py  auto.py  hooks.py  utils.py
recut/cli/: app.py
recut/cli/commands/: __init__.py  audit_cmd.py  check_cmd.py  export_cmd.py  intercept.py  peek_cmd.py  replay_cmd.py  run.py  stress_cmd.py
recut/cli/tui/: __init__.py  audit_view.py  diff_view.py  peek_view.py
recut/core/: __init__.py  auditor.py  checker.py  interceptor.py  replayer.py  stress.py  tracer.py
recut/export/: __init__.py  exporter.py
recut/flagging/: __init__.py  cache.py  engine.py  fingerprint.py  flags.py  prompts.py
recut/flagging/layers/: embeddings.py  llm_judge.py  native.py  rules.py
recut/plain/: __init__.py  summariser.py
recut/providers/: __init__.py  _pricing.py  _utils.py  anthropic.py  base.py  openai.py  otel_ingester.py  registry.py
recut/schema/: __init__.py  audit.py  check.py  fork.py  hooks.py  stress.py  trace.py
recut/storage/: __init__.py  circuit_breaker.py  db.py  models.py  pii.py  write_queue.py
tests/: _helpers.py  conftest.py  test_auto.py  test_check.py  test_edge_cases.py  test_error_handling.py  test_flagging.py  test_new_features.py  test_p0_features.py  test_p1_features.py  test_replay.py  test_replay_fidelity.py  test_schema.py  test_tracer.py
tests/fixtures/: trace_simple.json  trace_with_flags.json
