[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recut-ai"
version = "0.1.0"
description = "Intercept, replay, and audit your AI agent runs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Keelin Sekerka" }]
keywords = ["ai", "agent", "observability", "llm", "debugging", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "typer>=0.12",
    "textual>=0.60",
    "sqlmodel>=0.0.19",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
recut = "recut.cli.app:app"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/ksekerka/recut-ai"
Documentation = "https://github.com/ksekerka/recut-ai#readme"
Issues = "https://github.com/ksekerka/recut-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["recut"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
