[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recut-ai"
version = "0.4.0"
description = "Intercept, replay, and audit your AI agent runs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Keelin Sekerka" }]
keywords = ["ai", "agent", "observability", "llm", "debugging", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "typer>=0.12",
    "textual>=0.60",
    "sqlmodel>=0.0.19",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
recut = "recut.cli.app:app"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
demo = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "yfinance>=0.2",
    "duckduckgo-search>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pylint>=3.0",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/ksekerka/recut-ai"
Documentation = "https://github.com/ksekerka/recut-ai#readme"
Issues = "https://github.com/ksekerka/recut-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["recut"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["type-arg", "no-untyped-def", "no-untyped-call"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.pylint.main]
fail-under = 8.0
generated-members = [
    "model_fields",
    "model_config",
    "model_dump",
    "model_validate",
    "model_validate_json",
    "model_dump_json",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.bandit]
targets = ["recut"]
severity = "medium"
confidence = "medium"
